# CG_labs

./: .gitignore  README.md  smallpt  smallpt.cpp
PA0/: README.md  element.hpp
PA0/code/include/: element.hpp
PA1/: REPORT.md  note.md
PA1/code/include/: camera.hpp  group.hpp  plane.hpp  triangle.hpp
PA1/upload/code/include/: sphere.hpp
PA2/: REPORT.md
PA2/code/: run_all.sh
PA2/code/include/: curve.hpp  group.hpp  material.hpp  plane.hpp  sphere.hpp  triangle.hpp
PA2/code/testcases/: scene09_norm.txt
PA3/: .gitignore  CGAN.py  REPORT.md
Project/code/: CMakeLists.txt  run_all.sh  run_rabbit.sh
Project/code/include/: bounding.hpp  box.hpp  bvh.hpp  camera.hpp  curve.hpp  curve1.hpp  group.hpp  hit.hpp  material.hpp  media.hpp  mesh.hpp  moving_sphere.hpp  object3d.hpp  plane.hpp  pt.hpp  pt_thread.hpp  rand.hpp  ray.hpp  renderer.hpp  revsurface.hpp  scene_parser.hpp  sphere.hpp  stb_image.h  texture.hpp  transform.hpp  triangle.hpp
Project/code/include/sppm/: hitpoint.hpp  kdtree.hpp  sppm.hpp
Project/code/src/: main.cpp  mesh.cpp  scene_parser.cpp  texture.cpp
Project/code/testcases/: 1.txt  10.txt  2.txt  5.txt  6.txt  9.txt  ball.txt  ball_checker.txt  ball_move.txt  ball_noise.txt  balls.txt  box.txt  box_media.txt  bump.txt  curve_bezier.txt  final.txt  scene01_basic.txt  scene06_bunny_1k_new.txt  scene06_bunny_1k_vn.txt  scene09_norm.txt  scene18_dof.txt  smallpt.txt  weekend.txt
